--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.0",
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.6.0",
@@ -13,7 +14,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint \"**/*.{js,jsx}\"",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,5 +31,6 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "prettier": "^1.14.3"
-  }
+  },
+  "homepage": "http://frankelavsky.github.io/aclima-discogs-ui"
 }
