--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint \"**/*.{js,jsx}\"",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +32,5 @@
     "eslint-plugin-prettier": "^3.0.0",
     "prettier": "^1.14.3"
   },
-  "homepage": "http://frankelavsky.github.io/aclima-discogs-ui"
+  "homepage": "https://frankelavsky.github.io/aclima-discogs-ui/"
 }
